2003-12-03  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser-input.adb:
	Update to new templates_parser version.
	Set Support_Compressed to False. The template engine must get the
	 resource uncompressed to be able to parse it.

2003-11-29  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb, templates_parser-filter.adb:
	Update to 6.5 version.
	Implements the new REPLACE filter.

2003-11-18  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* zlib/*:
	Release 1.2.1.

	* zlib/ChangeLog:
	Make it binary for CVS, because it contain CVS macros in text.

2003-11-12  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* zlib/*:
	Prerelease 1.2.0.8.

2003-11-10  Pascal Obry  <pascal.obry@edf.fr>

	* zlib.adb:
	Minor reformatting.

2003-11-08  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(SOURCES): Add templates_parser-query.adb.
	
	* memory_streams.adb:
	Minor reformatting.

	* templates_parser-query.ads, templates_parser-query.adb:
	Initial revision from 6.4.

	* templates_parser.ads:
	Update to version 6.4.

2003-11-05  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb, templates_parser-cached_files.adb:
	Use AWS.OS_Lib services instead of GNAT.OS_Lib.

2003-10-28  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb:
	Update to version 6.3.
	This fixes the way errors from include files are reported.

2003-10-23  Pascal Obry  <pascal.obry@edf.fr>

	* zlib.adb:
	Revert back previous change.
	
2003-10-23  Pascal Obry  <pascal.obry@edf.fr>

	* zlib.adb:
	Add pragma Linker_Options -lz.

2003-10-10  Pascal Obry  <p.obry@wanadoo.fr>

	* src_include.gpr:
	with ssl project file.

2003-10-09  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb:
	Update to version 6.2.
	This fixes a bug in the way subdirectories are handled in the loader.

2003-10-07  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(SOURCES): Add memory_streams.adb.

2003-10-05  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* memory_streams.ads, memory_streams.adb: