@@ -1,3 +1,9 @@
+2003-12-04  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* memory_streams.ads,  memory_streams.adb:
+	(Append): New parameter Allow_Free for be able to append pointer to
+	 static data.
+
 2003-12-03  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* templates_parser-input.adb:
